--- a/docs/case_study/airborne_tem.ipynb
+++ b/docs/case_study/airborne_tem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64067faf",
+   "id": "271792c3",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d301a5",
+   "id": "73928eb7",
    "metadata": {},
    "source": [
     "(atem-data)=\n",
@@ -38,9 +38,9 @@
     "Time-domain systems come in many configurations, but they are generally made up of\n",
     "\n",
     "- an horizontal transmitter loop\n",
-    "- a receiver coils.\n",
+    "- a receiver coil.\n",
     "\n",
-    "The transmitter emits an EM pulse that propagates and interact with conductive structures. During the off-time, the receiver(s) records either components of the magnetic field ($H_x,\\;H_y,\\;H_z$), or more commonly the time-derivative ($\\frac{\\delta B_z}{\\delta t}$) of the field over a range of time channels.\n",
+    "The transmitter emits an EM pulse that propagates and interacts with conductive structures. During the off-time, the receiver(s) records either components of the magnetic field ($H_x,\\;H_y,\\;H_z$), or more commonly the time-derivative ($\\frac{\\delta B_z}{\\delta t}$) of the field over a range of time channels.\n",
     "For more background information about airborne EM methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/airborne_tdem/index.html#airborne-tdem)\n",
     "\n",
     "```{figure} ./images/atem/atem_configs.jpg\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdea0ac1",
+   "id": "a66aea32",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -130,7 +130,7 @@
     "\n",
     "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
-    "- Lastly, we refine a \"horizon\" get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
+    "- Lastly, we refine a \"horizon\" to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
     "```{figure} ./images/atem/atem_refinement.png\n",
     "---\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8840598b",
+   "id": "07b14d8b",
    "metadata": {},
    "source": [
     "### Forward simulation\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56d8592",
+   "id": "1ef7a082",
    "metadata": {},
    "source": [
     "## Unconstrained inversion\n",
@@ -196,7 +196,7 @@
     "(Right)(top) 2D profiles of (red) observed versus (black) predicted data for all 5 time channels. (bottom) Vertical section through the conductivity model below the same line.\n",
     "```\n",
     "\n",
-    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could resolve the conductive overburden layer, although the thickness is overestimated."
+    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with the ore body. The inversion could resolve the conductive overburden layer, although the thickness is overestimated."
    ]
   }
  ],
