--- a/docs/inversion/mesh_design.ipynb
+++ b/docs/inversion/mesh_design.ipynb
@@ -9,34 +9,21 @@
     "\n",
     "# Mesh design\n",
     "\n",
-    "This section provides details about the mesh creation towards joint inversions. The goal is to create inversion meshes that are well adapted to each survey, while also optimal for the subsequent joint inversion process.\n",
-    "\n",
-    "For further details and examples on how to create octree meshes, please visit the [Octree Mesh Creation](https://mirageoscience-octree-creation-app.readthedocs-hosted.com/en/latest) documentation provided by [Mira Geoscience](https://www.mirageoscience.com/mining-industry-software/python-integration).\n",
+    "An appopriately designed computational mesh is an important component to the geophysical inversion.  There are both general and survey-specific strategies that may be used to design 'good' meshes for inversion.  This section is targeted to practitioners of geophysical inversion.  The details covered here are complementary to and extend the core [Octree creation](https://mirageoscience-octree-creation-app.readthedocs-hosted.com/en/latest) documentation, so readers may want to reference both. \n",
     "\n",
     "\n",
     "## Base parameters\n",
     "\n",
-    "In a first step, we need to decide on\n",
+    "An Octree mesh can be though of as the combination of a base mesh and refinements.  The base mesh is defined by the core extent, padding, and the base cell resolution.  These concepts are explored in further detail in the following sub-sections.\n",
     "\n",
     "- [A region of interest (extent)](#Mesh-extent)\n",
     "- [Base cell resolution](#Base-cell-size)\n",
     "- [Padding distance](#Padding-cells)\n",
     "\n",
-    "These parameters define our core mesh parameters. While each survey can have its own discretization (refinements), the joint inversion routine requires all meshes to have the same outer extent and base cell size. The following sections provide details on the choices made.\n",
-    "\n",
     "\n",
     "### Mesh extent\n",
     "\n",
-    "Since we need our three simulations (direct-current, magnetics and gravity) to have the same core parameters, we need to create a  \"combined\" survey that contains all source and receiver locations in our domain.\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/common_survey.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: common_survey\n",
-    "---\n",
-    "Creation of a combined curve object from all surveys.\n",
-    "```\n",
+    "The mesh extent is provided as a `geoh5py.object` from which the bounding box is computed.  For geophysical inversion this will in most cases be the geophysical survey object so that core region of the mesh will be centered below the data.  For all `geoh5py.BaseSurvey` objects that contain a 'complement' object (transmitters, base stations, current electrodes), the extent will be computed from the superposition of the object and it's complement.\n",
     "\n",
     "### Base cell size\n",
     "\n",
@@ -46,16 +33,14 @@
     "- Terrain clearance (height above ground)\n",
     "- Modeling resolution (size of the target)\n",
     "\n",
-    "Numerical artefacts due to the discretization of topography decay sufficiently when receivers are roughly two cell dimensions away from the nearest edge or corner. Since the lowest drape height from the airborne magnetics is 60 m, a prudent cell size would be in the range of ~30 m.  We also want to avoid computing electrical potential differences within the same cell for numerical accuracy.  This is condition is guaranteed for cell dimensions less than half the smallest dipole separation - suggesting an even smaller cell (<=20 m) dimension for the 40m dipole direct-current data simulated here.\n",
+    "Numerical artefacts due to the discretization of topography decay sufficiently when receivers are roughly two cell dimensions away from the nearest edge or corner of a mesh cell in the air/earth boundary. For example, if the lowest drape height in given airborne survey is 60 m, a prudent cell size would be in the range of ~30 m.  Another rule of thumb is that the cell size should be smaller than half the smallest data spacing.  This is especially important for electrical methods where the electric field may be discontinuous and numerical artefacts may arise if the cells are not small enough to capture rapid changes in the field.  For example, a 40m dipole direct-current survey would suggest a cell size around ~20m.\n",
     "\n",
     "\n",
     "### Padding cells\n",
     "\n",
-    "The area of interest covers roughly 2 km in width. As a general rule of thumb, the padding region should be at least as wide as the data extent in order to easily model features with wavelengths that may extend beyond the surveyed area.\n",
+    "As a general rule of thumb, the padding region should be at least as wide as the data extent in order to easily model features with wavelengths that may extend beyond the surveyed area.\n",
     "\n",
-    "(diffusion-distance)=\n",
-    "\n",
-    "In the case of EM modeling, we also need to consider the diffusion distance of the EM fields. The [skin depth](http://em.geosci.xyz/content/maxwell1_fundamentals/harmonic_planewaves_homogeneous/skindepth.html?highlight=skin%20depth#approximations) can be estimated by\n",
+    "In the case of EM modeling, we also need to consider the diffusion distance of the EM fields. The [skin depth](http://em.geosci.xyz/content/maxwell1_fundamentals/harmonic_planewaves_homogeneous/skindepth.html?highlight=skin%20depth#approximations) represent the distance over which the fields decay by a factor of $1/e$.  The skin depth can thus be used to add a padding distance that incorporates the minimum area within which the fields have any influence on the solution.  The skin depth can be calculated for the frequency-domain system by:\n",
     "\n",
     "$$\n",
     "\\delta = 503 \\sqrt{\\frac{\\rho}{f}}\n",
@@ -63,7 +48,7 @@
     "\n",
     "where $\\rho$ is the expected resistivity of the background and $f$ is the base frequency of the system.\n",
     "\n",
-    "Equivalently for time-domain systems\n",
+    "Equivalently, for time-domain systems\n",
     "\n",
     "\n",
     "$$\n",
@@ -73,20 +58,7 @@
     "where $t\\;(sec)$ is the largest time measured by the system, $\\rho \\; (\\Omega.m)$ is the expected resistivity of the background and $\\mu_0 \\; (4 \\pi * 1e-7)$ is the permeability of free space.\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/mesh_core.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "\n",
-    "name: mesh_core\n",
-    "---\n",
-    "Core parameters used for the mesh creation of each inversion. Only the refinement strategies differ between surveys.\n",
-    "```"
+    "\n"
    ]
   },
   {
@@ -96,7 +68,7 @@
    "source": [
     "## Refinements\n",
     "\n",
-    "An octree mesh allows to increase the mesh resolution (smaller cells) in specific regions - warranted for either numerical accuracy or modeling purposes. Fine cells can be \"added\" to the octree grid using various insertion methods that depend on the type of object used:\n",
+    "An octree mesh allows the practitioner to increase the mesh resolution (smaller cells) in specific regions - warranted for either numerical accuracy or modeling purposes. Fine cells can be \"added\" to the octree grid using various insertion methods that depend on the type of object used:\n",
     "\n",
     "- Radial: Add concentric spherical shells of cells around points. It is the default behaviour for `Points`-like objects.\n",
     "- Line: Add concentric tubes around line segments. It is the default discretization for line sources (EM loops) and `Curve` objects.\n",
@@ -143,6 +115,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
